--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,8 @@
 h1 {
   color: goldenrod;
   font-weight: 600;
-  font-size: 2rem;
+  font-size: 1.4rem;
+  font-family: 'Courier New', Courier, monospace
 }
 h2{
   text-align: center;
